fixed row alignment in media query

--- a/css/index.css
+++ b/css/index.css
@@ -55,7 +55,7 @@ header {
     0% {
         transform: translateX(0%);
     } 100% {
-          transform: translateX(-50%);
+          transform: translateX(-100%);
       }
 }
 
@@ -561,7 +561,7 @@ header {
         margin-bottom: 0;
     }
 
-    .row{
+    .service-row{
         justify-content: center;
     }
 }
